crates/quokka-cli/src/commands/capture/snapshots/quokka_cli__commands__capture__tui__tests__hosts_detail_selected.snap
---
source: src/commands/capture/tui.rs
expression: out
---
qk capture · 6 pkts · 0 dropped · 0:00 · [Stream | Hosts]
Filters: (none)
▼ Safari (4520)
    1.1.1.1:443               1 pkts   54 B out / 0 B in
    17.142.180.36:443         1 pkts   54 B out / 0 B in
    142.250.80.46:443         1 pkts   54 B out / 0 B in
▼ Instagram (4521)
    8.8.8.8:443               1 pkts   54 B out / 0 B in
    31.13.65.36:443           1 pkts   54 B out / 0 B in
    157.240.241.5:443         1 pkts   54 B out / 0 B in












Selected host
Process:   Safari (4520)
Endpoint:  1.1.1.1:443
Traffic:   1 pkts · 54 B out / 0 B in
Seen:      first 0s ago · last 0s ago
Recent:    ↑54

[a]pp [p]roto [P]ort [i]face [d]pid [c]lear [q]uit
