crates/quokka-cli/src/commands/capture/snapshots/quokka_cli__commands__capture__tui__tests__stream_empty_state.snap
---
source: src/commands/capture/tui.rs
expression: out
---
qk capture · 0 pkts · 0 dropped · 0:00 · [Stream | Hosts]
Filters: (none)










                                no packets yet — waiting for traffic









Selected packet
(no packet selected)





[a]pp [p]roto [P]ort [i]face [d]pid [c]lear [q]uit
