crates/quokka-cli/src/commands/capture/snapshots/quokka_cli__commands__capture__tui__tests__terminal_too_small.snap
---
source: src/commands/capture/tui.rs
expression: out
---










Resize terminal to at least 80×24 to use
